fixed table spacing on dashboard

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -18,12 +18,17 @@ div.dashboard_container
   background-color:rgba(255,255,255,0.57);
 }
 
+tr.workout_row td
+{
+  padding-top: 15px;
+  padding-bottom: 15px;
+  vertical-align: middle;
+}
+
 td.delete_button
 {
-  padding-top:30px;
   width: 10%;
   text-align: center;
-  vertical-align: middle;
 }
 
 img.delete_image
@@ -34,19 +39,15 @@ img.delete_image
 
 td.start_button
 {
-  padding-top:30px;
-  width:10%;
+  width:20%;
   text-align: center;
-  vertical-align: middle;
 }
 
 td.workout_name
 {
-  padding-top:30px;
   width:50%;
   padding-left:75px;
   font-size:24pt;
-  vertical-align: middle;
 }
 
 img.start_image
